# side_bin

./: README.md  bun.lockb  package.json
fs_monitor/: .gitignore  CMakeLists.txt  build.bat
fs_monitor/fs_monitor/: CMakeLists.txt
fs_monitor/fs_monitor/private/: crt.cpp  crt.h  lib.cpp  monitors.cpp  monitors.h  util.h
fs_monitor/fs_monitor/public/: fs_monitor.h
sample_config/: config.json  style.css
src/: index.html  main.js  styles.css
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/fs_mon/: file_tag.rs  fs_mon.rs  trackers.rs
